fix: :adhesive_bandage: fix in the horizontal scroll

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -157,6 +157,18 @@ body {
   transform: perspective(600px) rotateY(360deg);
 }
 
+.container-form video{
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
 .form-contact {
   background-color: rgb(238, 238, 231);
   border-radius: 6px;
@@ -272,6 +284,7 @@ input.form-control.me-2 {
 
 footer {
   margin-top: 5%;
+  overflow: hidden;
 }
 
 .footer-title {
